feat: refactor BlockHistory to class with database annotations and implement ServerProfile for caching